--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,18 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+
+  # Cron service to install whenever-generated crontab and run system cron
+  cron:
+    build: .
+    command: ["/app/script/cron_entrypoint.sh"]
+    environment:
+      - RAILS_ENV=production
+      - APP_PATH=/app
+    env_file:
+      - .env
+    volumes:
+      - .:/app:cached
+    depends_on:
+      - app
+    restart: unless-stopped
